--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "keyboard>=0.13.5",
     "pillow>=12.0.0",
     "pip>=25.3",
+    "psutil>=7.1.3",
     "pyperclip>=1.11.0",
     "pywin32>=311",
+    "setuptools>=80.9.0",
 ]
