[Feat] Optimize pic names.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "text-box-of-mahoushoujo-no-majosaiban"
+name = "Textbox"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
