--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "Textbox"
 version = "0.1.0"
-description = "Add your description here"
+description = "Render your texts into textbot and send."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
