--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -9,7 +9,7 @@ SEND_HOTKEY: enter
 
 BLOCK_HOTKEY: false
 DELAY: 0.1
-AUTO_PASTE_IMAGE: true
+AUTO_PASTE_IMAGE: false
 AUTO_SEND_IMAGE: true
 
 WHITELIST: [TIM.exe, WeChat.exe, Weixin.exe, WeChatApp.exe, QQ.exe]
